Moving animations, better looking GUI

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,8 @@
 
 :root {
   --base-font: "Roboto Mono", "Source Code Pro", monospace;
-  --accent-color: #0ff;
-  --background-color: #000;
+  --accent-color: #1a929e;
+  --background-color: rgb(221, 243, 255);
 }
 
 html, body {
