--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,9 +7,56 @@
 
 }
 
-
 #page-title{
   font-family: var(--base-font);
-  font-size: max(10vh, 3em);
-  color: var(--accent-color)
+  font-size: 10vh;
+  color: var(--accent-color);
+  margin: 0;
+  padding-bottom: 0;
+  padding-top: 0;
+  height: 15vh;
+  box-sizing: border-box;
+}
+
+#controls-container{
+  height: 15vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.icon-button{
+  height: min(10vh, 10vw);
+  display: inline-block;
+  width: min(10vh, 10vw);
+  background-size: contain;
+  background-position: center center;
+  border: none;
+  background-color: #0000;
+  margin-left: 2.5vh;
+  margin-right: 2.5vh;
+  padding: 0;
+  cursor: pointer;
+}
+
+.icon-button:focus{
+  outline: none;
+}
+
+#score-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: var(--base-font);
+}
+#score-container h2{
+  margin: 0;
+  font-size: min(5vh, 5vw);
+}
+
+#score-container p{
+  margin: 0;
+  font-size: min(3vh, 3vw);
 }
